# stocks

./: .bandit  .env_example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  tests.yml
backend/app/: cache.py  database.py  logger.py  main.py  models.py  schemas.py
backend/app/models/: __init__.py  orm.py  schemas.py  trans_codes.py
backend/app/parsers/: robinhood.py  robinhood_pdf.py
backend/app/routers/: analyst.py  holdings.py  pnl.py  prices.py  sector.py  settings.py  transactions.py  transfers.py  upload.py
backend/tests/: conftest.py  test_analyst.py  test_api_endpoints.py  test_pnl.py  test_prices.py  test_robinhood_csv.py  test_robinhood_pdf.py  test_sector.py  test_upload.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: Spinner.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/pages/: AllTimePerformance.jsx  ConsolidatedReport.jsx  CurrentHoldings.jsx  Dashboard.jsx  PnLSummary.jsx  SectorDetail.jsx  Settings.jsx  StockDetail.jsx  TransactionHistory.jsx  Transfers.jsx  Upload.jsx  UploadHistory.jsx
